--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -3,6 +3,8 @@
  @import url('variables.less');
  @import url('display.less');
  @import url('typography.less');
- @import url('transitions.less');
+ // @import url('transitions.less');
  @import url('mixins.less');
  @import url('buttons.less');
+ @import url('flipper.less');
+ @import url('animations.less');
