--- a/src/assets/less/typography.less
+++ b/src/assets/less/typography.less
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Roboto:100|Work+Sans:100');
 
-// font-family: 'Montserrat', sans-serif;
-// font-family: 'Roboto', sans-serif;
-// font-family: 'Work Sans', sans-serif;
+
+body {
+	
+	font-family: @worksans;
+	line-height: 1em;
+	color: #333;
+	font-weight: 100;
+
+}
