--- a/src/assets/less/display.less
+++ b/src/assets/less/display.less
@@ -1,14 +1,14 @@
  .display {
 
-    height: 100px;
+    height: @display_height;
     .gradient();
     
   }
 
   .display-text {
 
-      font-family: @display-font;
-      color: @display-text-color;
+      font-family: @display_font;
+      color: @display_text_color;
       font-size: 2.5em;
       font-weight: 100;
       text-align: right;
@@ -25,7 +25,7 @@
   
   .screen {
 
-    height: 100px;
+    height: @display_height;
     position: relative;
 
   }
