--- a/src/assets/less/global.less
+++ b/src/assets/less/global.less
@@ -17,10 +17,10 @@ body {
 #calculator {
   
   .dimensions();
-  background: rgba(0, 0, 0, .6);
-  border-radius: 7px;
-  border: 1px solid rgba(0,0,0,0.35);
-  box-shadow: 2px 2px 5px rgba(0,0,0,0.25);
+  background: @calculator_bg;
+  border-radius: @calculator_radius;
+  border: 1px solid @calculator_border;
+  box-shadow: 2px 2px 5px @calculator_shadow_color;
 
   
 }
