--- a/src/assets/less/mixins.less
+++ b/src/assets/less/mixins.less
@@ -18,7 +18,7 @@
 
 	width: 100%;
     position: absolute;
-    background: linear-gradient(270deg, rgba(72,60,60,0.75), rgba(72,60,60,0.7), rgba(72,60,60,0.65), rgba(72,60,60,0.6));
+    background: linear-gradient(270deg, @gradient_stop_one, @gradient_stop_two, @gradient_stop_three, @gradient_stop_four);
     background-size: 800% 800%;
     
     -webkit-animation: colors 60s ease infinite;
