--- a/src/assets/less/typography.less
+++ b/src/assets/less/typography.less
@@ -4,8 +4,8 @@
 body {
 	
 	font-family: @worksans;
-	line-height: 1em;
-	color: #333;
+	line-height: @global_font_size;
+	color: @gray;
 	font-weight: 100;
 
 }
