--- a/src/assets/less/flipper.less
+++ b/src/assets/less/flipper.less
@@ -8,7 +8,7 @@
   -moz-perspective: 1000;
   -o-perspective: 1000;
    perspective: 1000;
-   
+
 }
 
 .flipthis {
@@ -35,7 +35,7 @@
   -moz-transition: 0.6s;
   -moz-transform-style: preserve-3d;
 
-  height: 300px;
+  height: @calculator_height;
   position:absolute;
   top:0;
   left:0;
