Add calculator functionality

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -40,8 +40,11 @@ body {
   right: 5px;
   position: absolute;
   z-index: 100;
-  top: 50%;
+  bottom: 10px;
   width: 100%;
+}
+.display-text.small-text {
+  font-size: 1.5em;
 }
 .screen {
   height: 100px;
