--- a/src/assets/less/display.less
+++ b/src/assets/less/display.less
@@ -17,9 +17,15 @@
       // Positioning
       position: absolute;
       z-index: 100;
-      top: 50%;
+      bottom: 10px;
     
       width: 100%;
+
+      &.small-text{
+
+        font-size: 1.5em;
+
+      }
       
   }
   
