Added outstanding keyboard event handling, update styles and chage percentage data type

--- a/src/assets/less/buttons.less
+++ b/src/assets/less/buttons.less
@@ -26,6 +26,7 @@ button {
       font-family: @button_text;
       font-size: @button_font_size;
       color: @button_text_color;
+      font-weight: @button_font_weight;
       
       float: left;
       height: @button_height;
