--- a/src/assets/less/variables.less
+++ b/src/assets/less/variables.less
@@ -21,6 +21,8 @@
 @display_font: @worksans;
 @button_text: @worksans;
 
+@button_font_weight: 300;
+
 @global_font_size: 1em;
 @button_font_size: 1.2em;
 
