--- a/src/assets/less/animations.less
+++ b/src/assets/less/animations.less
@@ -24,3 +24,58 @@
     100% { background-position:0% 50% }
 
   }
+
+
+@-webkit-keyframes throb {
+
+  0%{
+    
+    transform: scale(0);
+
+
+  }
+  70%{
+    
+    transform: scale(1.5);
+    
+
+  }
+  100%{
+
+    transform: scale(1);
+
+  }
+
+
+}
+
+@-webkit-keyframes throbb {
+
+  0%{
+    
+    transform: scale(0);
+
+
+  }
+  70%{
+    
+    transform: scale(1.5);
+    
+
+  }
+  100%{
+
+    transform: scale(1);
+
+  }
+
+
+}
+
+@-moz-keyframes slideinBounce {
+  
+}
+
+@keyframes slideinBounce {
+  
+}
