Cleaned up code

--- a/src/assets/less/animations.less
+++ b/src/assets/less/animations.less
@@ -28,54 +28,36 @@
 
 @-webkit-keyframes throb {
 
-  0%{
-    
-    transform: scale(0);
+  .throb();
 
+}
 
-  }
-  70%{
-    
-    transform: scale(1.5);
-    
+@-moz-keyframes throb {
 
-  }
-  100%{
+  .throb();
 
-    transform: scale(1);
+}
 
-  }
-
+@keyframes throb {
+  
+  .throb();
 
 }
 
 @-webkit-keyframes throbb {
 
-  0%{
-    
-    transform: scale(0);
-
-
-  }
-  70%{
-    
-    transform: scale(1.5);
-    
-
-  }
-  100%{
-
-    transform: scale(1);
-
-  }
-
+  .throb();
 
 }
 
-@-moz-keyframes slideinBounce {
+@-moz-keyframes throbb {
   
+  .throb();
+
 }
 
-@keyframes slideinBounce {
+@keyframes throbb {
   
+  .throb();
+
 }
