--- a/src/assets/less/mixins.less
+++ b/src/assets/less/mixins.less
@@ -38,3 +38,11 @@
 	width: @calculator_width;
 	height: @calculator_height;
 }
+
+.throb() {
+        
+    0%{ transform: scale(0); }
+    70%{ transform: scale(1.5); }
+    100%{ transform: scale(1); }
+
+}
